--- a/lisp/erc/ChangeLog
+++ b/lisp/erc/ChangeLog
@@ -1,3 +1,10 @@
+2012-04-10  Deniz Dogan  <deniz@dogan.se>  (tiny change)
+
+	* erc.el (erc-display-prompt): Adds the field text property to the
+	ERC prompt.  This allows users to use `kill-whole-line' to kill
+	all text back to the prompt given that it's on a single line
+	(bug#10841).
+
 2012-04-09  Chong Yidong  <cyd@gnu.org>
 
 	* erc.el (erc-cmd-SET): Call custom-variable-p instead of
