--- a/lisp/erc/ChangeLog
+++ b/lisp/erc/ChangeLog
@@ -1,3 +1,11 @@
+2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* erc-join.el (erc-server-join-channel): New function to look up
+	the channel password via auth-source.
+	(erc-autojoin-channels): Use it.
+	(erc-autojoin-after-ident): Ditto.
+	(erc-autojoin-channels-alist): Mention auth-source.
+
 2012-04-10  Deniz Dogan  <deniz@dogan.se>  (tiny change)
 
 	* erc.el (erc-display-prompt): Adds the field text property to the
