--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-10  Glenn Morris  <rgm@gnu.org>
+
+	* entering.texi (Entering Emacs):
+	Do not mention initial-buffer-choice = t.
+
 2012-04-08  Glenn Morris  <rgm@gnu.org>
 
 	* misc.texi (Gnus Startup): Use @env for environment variables.
