--- a/doc/lispref/processes.texi
+++ b/doc/lispref/processes.texi
@@ -714,7 +714,7 @@ This command displays a listing of all living processes.  In addition,
 it finally deletes any process whose status was @samp{Exited} or
 @samp{Signaled}.  It returns @code{nil}.
 
-The processes are shown in a buffer named @samp{*Process List*}, whose
+The processes are shown in a buffer named @file{*Process List*}, whose
 major mode is named Process Menu mode.
 
 If @var{query-only} is non-@code{nil} then it lists only processes
