--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-10  Glenn Morris  <rgm@gnu.org>
+
+	* unidata/Makefile.in: Add FSF copyright.
+	Make it use autoconf features, and work for out-of-tree builds.
+
 2012-04-07  Eli Zaretskii  <eliz@gnu.org>
 
 	* unidata/README:
