--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-10  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* international/characters.el: Recover lost case pairs.
+
 2012-04-10  Glenn Morris  <rgm@gnu.org>
 
 	* files.el (dir-locals-set-class-variables): Doc fix.
