--- a/lisp/url/ChangeLog
+++ b/lisp/url/ChangeLog
@@ -1,3 +1,13 @@
+2012-04-10  William Xu  <william.xwl@gmail.com>  (tiny change)
+
+	* url.el (url-retrieve-internal): Hexify multibye URL string first
+	when necessary (bug#7017).
+
+2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* url.el (url-retrieve-internal): Mention utf-8 encoding.
+	(url-retrieve): Ditto.
+
 2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* url-util.el (url-unhex-string): Add an optional CODING-SYSTEM
