--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-10  Nathan Weizenbaum  <nweiz@google.com>
+
+	* progmodes/python.el (python-fill-paragraph): Make
+	python-fill-region in a multiline string work when font-lock is
+	disabled (bug#7018).
+
 2012-04-10  Laimonas Vėbra  <laimonas.vebra@gmail.com>  (tiny change)
 
 	* language/european.el (cp775): Added oem/legacy (en)coding on
