--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-10  Juanma Barranquero  <lekktu@gmail.com>
+
+	* misc.el: Display absolute path of loaded DLLs (bug#10424).
+	(list-dynamic-libraries--loaded): New function.
+	(list-dynamic-libraries--refresh): Use it.
+
 2012-04-10  Nathan Weizenbaum  <nweiz@google.com>
 
 	* progmodes/python.el (python-fill-paragraph): Make
