--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-10  Juanma Barranquero  <lekktu@gmail.com>
+
+	* w32.c (w32_delayed_load): Record the full path of the library
+	being loaded (bug#10424).
+
 2012-04-09  Glenn Morris  <rgm@gnu.org>
 
 	* doc.c (Fsnarf_documentation): Check variables, functions are bound,
