--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-10  Eli Zaretskii  <eliz@gnu.org>
+
+	* makefile.w32-in (emacs, misc, lispref, lispintro): New targets,
+	each runs makeinfo in its own subdirectory of 'doc'.
+	(info-gmake): Depend on these new targets.
+
 2012-04-07  Glenn Morris  <rgm@gnu.org>
 
 	* config.nt, makefile.w32-in, emacs.rc, emacsclient.rc:
