--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-10  "Jason S. Cornez"  <jcornez@ravenpack.com>  (tiny change)
+
+	* keyboard.c: Override inhibit-quit after the third C-g (bug#6585).
+	(force_quit_count): New var.
+	(handle_interrupt): Use it.
+
 2012-04-10  Juanma Barranquero  <lekktu@gmail.com>
 
 	* w32.c (w32_delayed_load): Record the full path of the library
@@ -17,8 +23,8 @@
 	* process.h: Add integer `gnutls_handshakes_tried' member to
 	process struct.
 
-	* gnutls.h: Add `GNUTLS_EMACS_HANDSHAKES_LIMIT' upper limit.  Add
-	convenience `GNUTLS_LOG2i' macro.
+	* gnutls.h: Add `GNUTLS_EMACS_HANDSHAKES_LIMIT' upper limit.
+	Add convenience `GNUTLS_LOG2i' macro.
 
 	* gnutls.c (gnutls_log_function2i): Convenience log function.
 	(emacs_gnutls_read): Use new log functions,
@@ -104,8 +110,8 @@
 	(xml_cleanup_parser): New function, export for fn_xmlCleanupParser.
 	Calls xmlCleanupParser only if libxml2 was loaded (or statically
 	linked in).
-	(Flibxml_parse_html_region, Flibxml_parse_xml_region): Call
-	init_libxml2_functions before calling libxml2 functions.
+	(Flibxml_parse_html_region, Flibxml_parse_xml_region):
+	Call init_libxml2_functions before calling libxml2 functions.
 	(syms_of_xml) <Qlibxml2_dll>: DEFSYM it.
 
 	* emacs.c: Don't include libxml/parser.h.
