--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-04-10  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* emacs-lisp/autoload.el (autoload-make-program): Remove, unused.
+
 	* international/quail.el: Use dolist and simplify.
 	(quail-define-package, quail-update-keyboard-layout)
 	(quail-define-rules): Use dolist.
