--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-11  Glenn Morris  <rgm@gnu.org>
+
+	* vc/vc-bzr.el (vc-bzr-sha1-program, sha1-program): Remove.
+	(vc-bzr-sha1): Use internal sha1.
+
 2012-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* progmodes/flymake.el (flymake-mode): Beware read-only dirs (bug#8954).
