--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-11  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (GNUSTEP_CFLAGS): Rename from C_SWITCH_X_SYSTEM.
+
 2012-04-10  Glenn Morris  <rgm@gnu.org>
 
 	* configure.in: Conditionally generate admin/unidata/Makefile.
