--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-11  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (GNUSTEP_CFLAGS): Rename from C_SWITCH_X_SYSTEM.
+
 2012-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* alloc.c (lisp_align_malloc): Remove unneeded prototype.
@@ -9738,7 +9742,7 @@ See ChangeLog.11 for earlier changes.
 ;; coding: utf-8
 ;; End:
 
-  Copyright (C) 2011-2012  Free Software Foundation, Inc.
+  Copyright (C) 2011-2012 Free Software Foundation, Inc.
 
   This file is part of GNU Emacs.
 
