Note obsolescence of mouse-sel.el in NEWS.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -43,6 +43,10 @@ been adding them there, put them somewhere else, eg site-lisp.
 ** erc will look up server/channel names via auth-source and use the
    channel keys found, if any.
 
+** Obsolete modes
+
+*** mouse-sel.el
+
 
 * New Modes and Packages in Emacs 24.2
 
