--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-11  Daniel Colascione  <dancol@dancol.org>
+
+	* s/cygwin.h: The vfork the #define in cygwin.h was protecting
+	against is gone.  It's better to use vfork now so that when Cygwin
+	gains a new, working vfork, we use it automatically (bug#10398).
+
 2012-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* window.c (save_window_save): Obey window-point-insertion-type.
