--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-11  Deniz Dogan  <deniz.a.m.dogan@gmail.com>
+
+	* net/rcirc.el (rcirc-kill-channel-buffers): New variable.
+	(rcirc-kill-buffer-hook): Use it to kill channel buffers (bug#5128).
+
 2012-04-11  William Stevenson  <yhvh2000@gmail.com>
 
 	* textmodes/artist.el (artist-mode): Convert artist-mode to use
