--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-11  Alan Mackenzie  <acm@muc.de>
+
+	* progmodes/cc-engine.el (c-before-change-check-<>-operators):
+	Correct two search limits.
+
 2012-04-10  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* startup.el (command-line-1): Inhibit splash from daemon (bug#10996).
