Doc and manual fixes related to mule
* doc/emacs/mule.texi (International): Copyedits.
(International Chars): Update C-x = example output.
(Disabling Multibyte): Rename from "Enabling Multibyte".
Clarify what "unibyte: t" does, and mode-line description.
(Unibyte Mode): Update for "Disabling Multibyte" node name change.
Use Texinfo recommended convention for quotes+punctuation.

* doc/emacs/custom.texi (Specifying File Variables):
Fix "unibyte" description.
Update for "Disabling Multibyte" node name change.

* doc/emacs/emacs.texi: Update for "Disabling Multibyte" node name change.

* doc/lispref/loading.texi (Loading Non-ASCII):
"unibyte:" can also be at the end.

* lisp/international/mule.el (set-auto-coding-for-load): Doc fix.

--- a/doc/emacs/custom.texi
+++ b/doc/emacs/custom.texi
@@ -1163,8 +1163,8 @@ returned by that expression is ignored).
 conversion of this file.  @xref{Coding Systems}.
 
 @item
-@code{unibyte} says to visit the file in a unibyte buffer, if the
-value is @code{t}.  @xref{Enabling Multibyte}.
+@code{unibyte} says to load or compile a file of Emacs Lisp in unibyte
+mode, if the value is @code{t}.  @xref{Disabling Multibyte}.
 @end itemize
 
 @noindent
