--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,15 @@
+2012-04-12  Glenn Morris  <rgm@gnu.org>
+
+	* mule.texi (International): Copyedits.
+	(International Chars): Update C-x = example output.
+	(Disabling Multibyte): Rename from "Enabling Multibyte".
+	Clarify what "unibyte: t" does, and mode-line description.
+	(Unibyte Mode): Update for "Disabling Multibyte" node name change.
+	Use Texinfo recommended convention for quotes+punctuation.
+	* custom.texi (Specifying File Variables):  Fix "unibyte" description.
+	Update for "Disabling Multibyte" node name change.
+	* emacs.texi: Update for "Disabling Multibyte" node name change.
+
 2012-04-10  Glenn Morris  <rgm@gnu.org>
 
 	* abbrevs.texi, arevert-xtra.texi, buffers.texi, building.texi:
