--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-12  Glenn Morris  <rgm@gnu.org>
+
+	* loading.texi (Loading Non-ASCII): "unibyte:" can also be at the end.
+
 2012-04-10  Glenn Morris  <rgm@gnu.org>
 
 	* strings.texi (Case Tables):
