--- a/doc/lispref/loading.texi
+++ b/doc/lispref/loading.texi
@@ -375,7 +375,7 @@ strings are multibyte strings should not be noticeable, since
 inserting them in unibyte buffers converts them to unibyte
 automatically.  However, if this does make a difference, you can force
 a particular Lisp file to be interpreted as unibyte by writing
-@samp{-*-unibyte: t;-*-} in a comment on the file's first line.  With
+@samp{unibyte: t} in a local variables section.  With
 that designator, the file will unconditionally be interpreted as
 unibyte, even in an ordinary multibyte Emacs session.  This can matter
 when making keybindings to non-@acronym{ASCII} characters written as
