--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-12  Glenn Morris  <rgm@gnu.org>
+
+	* international/mule.el (set-auto-coding-for-load): Doc fix.
+
 2012-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* imenu.el (imenu-add-to-menubar): `current-local-map' can be nil.
